Fixed Image display

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 <div class="container gallery-container">
 
     <h1>Welcome to Chris Doherty Mini Project 1</h1>
+    <div class="html";>
     <a href="index.php">
         <button type="button" class="btn first">Click Here To Enter</button>
     </a>
+    </div>
+
 
 
 </div>
