--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <h1>Welcome to Chris Doherty Mini Project 1</h1>
     <div class="html";>
-    <a href="index.php" style="align-content: center; alignment: center;">
+    <a href="index.php" id="enterhere">
         <button type="button" class="btn first">Click Here To Enter</button>
     </a>
     </div>
